# elf

./: .gitignore  CMakeLists.txt  README.md
cmake/: AddExecutableWrapper.cmake  ArgsCheck.cmake  Conversions.cmake
cmake/toolchains/: arm-none-eabi-gcc.cmake  cortexM3-softfloat.cmake  cortexM7-hardfloat.cmake
cmake/toolchains/cross/: STM32F103VBIx.cmake  arm-none-eabi-gcc.cmake  cortexM4-hardfloat.cmake
cmake/toolchains/native/: clang.cmake  gcc-8.cmake
code/: CMakeLists.txt  static-elf.c  static-elf.h
misc/: build  compile  create  dependencies  run-tests
tests/: sample-elf.c  sample-lib.c  static-elf-tests.c  test-static-elf.c
